Modified input background-colors to prices which include VAT

--- a/trunk/themes/default/goah.css
+++ b/trunk/themes/default/goah.css
@@ -254,6 +254,17 @@ input.number_sell {
 	-moz-border-radius: 3px;
 }
 
+input.number_buy {
+	text-align: right;
+	width: 52px;
+	font-size: 0.9em;
+	background-color: #dae8f1;
+	padding-top: 2px;
+	padding-bottom: 2px;
+	border: 1px solid #707070;
+	-moz-border-radius: 3px;
+}
+
 input.number_alert {
 	text-align: right;
 	width: 52px;
