Layout and text fixes. Added draft background for information th, which is under h2-tag.

--- a/trunk/themes/default/goah.css
+++ b/trunk/themes/default/goah.css
@@ -302,6 +302,10 @@ thead th, tbody td.heading {
     white-space: nowrap;
 }
 
+thead th.info {
+	background: transparent url('gfx/bg-table-header-info.png') repeat-x 0 0;
+}
+
 thead th.maxwidth {
     width: 100%;
 }
