--- a/trunk/themes/default/goah.css
+++ b/trunk/themes/default/goah.css
@@ -251,6 +251,12 @@ input.number {
 	font-size: 0.9em;
 }
 
+input.number_small {
+	text-align: right;
+	width: 40px;
+	font-size: 0.9em;
+}
+
 input.number_sell {
 	text-align: right;
 	width: 52px;
