Improved tablet navigation menu. It uses now jQuery to show submenus.

--- a/trunk/themes/tablet/menu.css
+++ b/trunk/themes/tablet/menu.css
@@ -65,7 +65,7 @@
 		width: 173px; /* CSS2-standardin mukaan pakko olla */
 }
 
-#navi li.active > a {
+#active > a {
     	background-color: #dae8f1;
    	font-weight: bold;
 }
