--- a/trunk/themes/GongoUI/css/login.css
+++ b/trunk/themes/GongoUI/css/login.css
@@ -1,5 +1,5 @@
 body {
-	background: transparent url('gfx/bg-top.png') repeat-x 0% 0%;;
+	background: transparent url('../gfx/bg-top.png') repeat-x 0% 0%;;
 	margin: 0;
 	padding: 0;
 	font-family: "Arial", sans-serif;
@@ -27,7 +27,7 @@ div {
 h2 {
     	font-size: 1.2em;
 	font-weight: normal;
-    	background: transparent url('gfx/bg-top.png') repeat-x 0 0;
+    	background: transparent url('../gfx/bg-top.png') repeat-x 0 0;
     	color: #fff;
     	height: 37px;
     	margin: 0px;
@@ -43,7 +43,7 @@ h2 {
 }
 
 #loginbox p.logo {
-	background: url('gfx/bg-login-header.png');
+	background: url('../gfx/bg-login-header.png');
 	margin-bottom: 0px;
 	text-align: center;
 }
@@ -62,7 +62,7 @@ table {
 }
 
 thead th {
-    background: transparent url('gfx/bg-table-header.png') repeat-x 0 0;
+    background: transparent url('../gfx/bg-table-header.png') repeat-x 0 0;
     color: #fff;
     line-height: 24px;
     height: 24px;
