Fixed Tablet UI

--- a/trunk/themes/tablet/goah.css
+++ b/trunk/themes/tablet/goah.css
@@ -381,7 +381,7 @@ input.big {
 }
 
 select.small {
-	width: 75px;
+	width: 97px;
 }
 
 select.medium {
@@ -390,6 +390,10 @@ select.medium {
 
 select.big {
 	width: 250px;
+}
+
+select.huge {
+	width: 300px;
 }
 
 .clearfix {
