Fixed product listing on time tracking so that product group isn't on every row.
refs 123

--- a/trunk/themes/default/goah.css
+++ b/trunk/themes/default/goah.css
@@ -396,6 +396,11 @@ select.big {
 	width: 250px;
 }
 
+select option.subhead {
+	font-weight: bold;
+	text-decoration: underline;
+}
+
 .clearfix {
 	clear: both;
 	float: none;
