Hide error, warning and debug messages from prints

--- a/trunk/themes/default/print.css
+++ b/trunk/themes/default/print.css
@@ -27,6 +27,18 @@ body {
 	display: none;
 }
 
+p.msg-warning {
+	display: none;
+}
+
+p.msg-error {
+	display: none;
+}
+
+p.msg-debug {
+	display: none;
+}
+
 form {
 	display: none;
 }
