Added class tr.noprint to print.css to ability to hide unwanted rows from prints

--- a/trunk/themes/default/print.css
+++ b/trunk/themes/default/print.css
@@ -52,6 +52,10 @@ table {
 	color: #000;
 }
 
+tr.noprint {
+	display: none;
+}
+
 h2 {
 	color: #000;
 }
@@ -74,6 +78,10 @@ tbody tr {
 }
 
 br {
+	display: none;
+}
+
+blockquote {
 	display: none;
 }
 
