--- a/trunk/themes/default/goah.css
+++ b/trunk/themes/default/goah.css
@@ -255,6 +255,24 @@ td.medium {
 	font-size: 0.9em;
 }
 
+.number_left {
+	text-align: left;
+	font-size: 0.9em;
+}
+
+.number_left_color {
+	text-align: left;
+	width: 130px;
+	font-size: 0.9em;
+	/*background-color: #dae8f1;*/
+	background-color: #e7f1f3;
+	padding-top: 2px;
+	padding-bottom: 2px;
+    padding-left: 6px;
+	border: 0px solid #707070;
+	-moz-border-radius: 3px;
+}
+
 input.number {
 	text-align: right;
 	width: 52px;
@@ -378,7 +396,7 @@ textarea.huge {
 
 textarea.tracking_longdesc {
 	width: 100%;
-	height: 150px;
+	height: 120px;
 }
 
 input {
